# knowledge_base

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TROUBLESHOOTING_NOTES.md  docker-compose.yml  mkdocs.yml  plan.md  pyproject.toml  setup_kbs.py
.github/: copilot-instructions.md
.github/agents/: kb_access.agent.md
.github/workflows/: test-mcp-server.yml
config/: dev.yaml  prod.yaml  test.yaml
docker/: prometheus.yml
docs/: architecture.md
docs/developer-guide/: extending.md
docs/operations/: runbooks.md
src/agents/: routing_agent.py
src/api/: app.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  ingestion.py  knowledge_bases.py  retrieval.py
src/application/services/: services.py
src/chunking/: hierarchical_chunker.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py
src/domain/events/: domain_events.py
src/domain/interfaces/: __init__.py
src/domain/models/: __init__.py  chunk.py  document.py  knowledge_base.py  retrieval.py
src/embeddings/: factory.py
src/infrastructure/embeddings/: ollama_provider.py  openai_compatible_provider.py  sentence_transformers_provider.py
src/infrastructure/persistence/: sqlite_kb_repository.py
src/infrastructure/vector_stores/: chroma_store.py  faiss_store.py  qdrant_store.py
src/ingestion/: pipeline.py
src/mcp/: server.py
src/monitoring/: __init__.py  logging.py  metrics.py  tracing.py
src/parsers/: base.py  registry.py
src/parsers/pdf/: docling_parser.py  ocr_parser.py  pymupdf_parser.py
src/reranking/: factory.py  rerankers.py
src/retrieval/: bm25_retriever.py  dense_retriever.py  pipeline.py  rrf_fusion.py
src/tools/: tools.py
src/vectorstores/: factory.py
tests/: conftest.py
tests/e2e/: test_api.py  test_mcp_server_kb.py
tests/integration/: test_retrieval_pipeline.py
tests/unit/: test_chunking.py  test_domain_models.py  test_rrf_fusion.py
