[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-base"
version = "1.0.0"
description = "Production-grade local RAG platform for enterprise knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Knowledge Base Team" }]
keywords = ["rag", "llm", "knowledge-base", "mcp", "document-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.19",

    # Document parsing
    "docling>=2.5.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.0.0",

    # Embeddings
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "numpy>=1.26.0",

    # Vector stores
    "qdrant-client[fastembed]>=1.12.0",
    "chromadb>=0.5.20",
    "faiss-cpu>=1.9.0",

    # BM25
    "rank-bm25>=0.2.2",

    # Reranking
    "FlagEmbedding>=1.3.0",

    # Database / persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",

    # Logging & monitoring
    "loguru>=0.7.2",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",

    # Config
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",

    # MCP
    "mcp>=1.2.0",

    # HTTP & async
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "anyio>=4.7.0",

    # Utilities
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "faker>=33.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.12",
    "types-aiofiles>=24.1.0",
]

paddle = [
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.8.0",
]

vlm = [
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
]

[project.scripts]
kb-server = "src.api.app:main"
kb-mcp = "src.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["src"]
omit = ["src/*/migrations/*", "tests/*"]
